# gslnls

./: .Rbuildignore  .gitignore  DESCRIPTION  Dockerfile  Makefile  NAMESPACE  NEWS.md  README.md  cleanup  cleanup.win  config.status  configure  configure.ac  configure.win  cran-comments.md  gslnls.Rproj
.github/workflows/: R-CMD-check.yaml  detect-globals.yaml
R/: nls-methods.R  nls.R  nls_large.R  nls_methods.R  nls_rho.R  nls_test.R  utils.R
inst/unit_tests/: unit_tests_gslnls.R
man/: anova.gsl_nls.Rd  coef.gsl_nls.Rd  confint.gsl_nls.Rd  confintd.Rd  confintd.gsl_nls.Rd  cooks.distance.gsl_nls.Rd  deviance.gsl_nls.Rd  df.residual.gsl_nls.Rd  fitted.gsl_nls.Rd  formula.gsl_nls.Rd  gsl_nls.Rd  gsl_nls_control.Rd  gsl_nls_large.Rd  gsl_nls_loss.Rd  hatvalues.gsl_nls.Rd  logLik.gsl_nls.Rd  nls_test_list.Rd  nls_test_problem.Rd  nobs.gsl_nls.Rd  predict.gsl_nls.Rd  residuals.gsl_nls.Rd  sigma.gsl_nls.Rd  summary.gsl_nls.Rd  vcov.gsl_nls.Rd
src/: Makevars.in  Makevars.ucrt  Makevars.win  Makevars.win.in  fdf.c  fdfvv.c  fdjac.c  gsl_nls.h  init.c  nls.c  nls_fit.c  nls_irls.c  nls_large.c  nls_mstart.c  nls_multistart.c  nls_test.c  nls_utils.c  test_nls.f90  trust.c
tests/: test_gslnls.R
tools/: winlibs.R
